--- a/Assigment/Day50/style.css
+++ b/Assigment/Day50/style.css
@@ -22,19 +22,29 @@ main {
 main section {
   height: 100%;
   width: 32rem;
-  background-color: crimson;
   border-radius: 5px;
 }
 
 .all-reels {
   position: relative;
   height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
+
+.all-reels::-webkit-scrollbar {
+  display: none;
 }
 
 .reels {
   width: 100%;
   height: 100%;
   position: relative;
+  scroll-snap-align: center; /* Snap each item to the center of the container */
+  scroll-snap-stop: always;
+  flex-shrink: 0;
 }
 .reels video {
   width: 100%;
@@ -85,7 +95,7 @@ main section {
 
 .corner {
   display: flex;
-  flex-direction: column; /* vertical icons */
+  flex-direction: column;
   padding: 20px;
   margin: 120px 0px;
   font-size: 30px;
@@ -100,15 +110,15 @@ main section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white; /* optional */
-  cursor: pointer; /* pointer on hover */
+  color: white;
+  cursor: pointer;
 }
 
 .corner i {
-  font-size: 32px; /* increase only icon size */
+  font-size: 32px;
 }
 
 .corner h4 {
-  margin-top: 4px; /* space between icon and number */
-  font-size: 15px; /* increase number size optionally */
+  margin-top: 4px;
+  font-size: 15px;
 }/*# sourceMappingURL=style.css.map */
