--- a/Assigment/Day50/style.scss
+++ b/Assigment/Day50/style.scss
@@ -24,7 +24,7 @@ main{
   section{
     height: 100%;
     width: 32rem;
-    background-color: crimson;
+    // background-color: crimson;
     border-radius: 5px;
     
   } 
@@ -32,11 +32,23 @@ main{
 .all-reels{
   position: relative;
   height: 100%;
+  overflow-y: scroll;
+   scrollbar-width: none;
+   scroll-snap-type: y mandatory;
+   scroll-behavior: smooth;
 }
+.all-reels::-webkit-scrollbar {
+  display: none;
+}
+
 .reels{
   width: 100%;
   height: 100%;
   position: relative;
+  scroll-snap-align: center; /* Snap each item to the center of the container */
+  scroll-snap-stop: always;
+  flex-shrink: 0;
+
   video{
     width: 100%;
   height: 100%;
@@ -55,7 +67,7 @@ main{
 }
 .bottom-up{
   display: flex;
-  // justify-content: space-around;
+  
   gap: 25px;
   margin: 2px 10px;
   img{
@@ -85,7 +97,7 @@ main{
 
 .corner{
   display: flex;
-  flex-direction: column; /* vertical icons */
+  flex-direction: column; 
   padding: 20px;
   margin: 120px 0px;
   font-size: 30px;
@@ -102,17 +114,17 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;             /* optional */
-  cursor: pointer;          /* pointer on hover */
+  color: white;           
+  cursor: pointer;        
 }
 
 .corner i {
  
-  font-size: 32px;          /* increase only icon size */
+  font-size: 32px;         
 }
 
 .corner h4 {
-  margin-top: 4px;          /* space between icon and number */
-  font-size: 15px;          /* increase number size optionally */
+  margin-top: 4px;         
+  font-size: 15px;         
 }
 
